Fix css issue where alert close button was not visible

--- a/src/css/metacatui-common.css
+++ b/src/css/metacatui-common.css
@@ -6131,6 +6131,7 @@ textarea.medium{
 .Editor #Content > .alert-container .alert{
 	padding: 20px;
 	font-weight: bold;
+  box-sizing: border-box;
 	border-radius: 0px;
 	-moz-border-radius: 0px;
 	-webkit-border-radius: 0px;
